--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <meta http-equiv="refresh" content="0; 
-url=http://karel-van-de-plassche.github.io/doc/html/index.html" />
+url=http://karel-van-de-plassche.github.io/PF2q/doc/html/" />
 
